# PulseConnector

./: .gitignore  CHANGELOG.md  LICENSE  analytics.py  config.json  db.py  db_pool.py  gui_jsonConfig.py  gui_main.py  install.py  installer.md  main.py  proxy.py  pyproject.toml  readme.md  requeriments.txt  requirements.txt  server.py  server_controller.py  utils.py  version.py  web_route.py
.github/workflows/: release.yml
Docs/: benchmark.md
analytics/: analytics.py  logger.py  usage_counter.py
certs/: admin_certs.py  renew_cert.py
database/postgresql/: northwind.sql
docker/sqlserver2022/: Dockerfile  manual.md
docs/: benchmark.md  installer.md
routes/: api_routes.py  web_routes.py
security/: endpoints.json  groups.json  password_hasher.py  permissions.json  security_provider.py  users.json
threads/: log_bridge.py  run_server.py  server_state.py
