[project]
name = "PulseConnector"
dynamic = ["version"]
description = "Lightweight database connector that exposes tables as OData API"
requires-python = ">=3.10"

[tool.semantic_release]
version_variables = ["version.py:__version__"]
branch = "master"
upload_to_pypi = false
upload_to_release = true
build_command = ""
commit_message = "Release v{version}"
tag_format = "v{version}"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
